# popup-audio-player

./: .gitignore  README.md  main.py  pyproject.toml
services/: audio.py  logging.py
ui/: launcher.py  player.py
