[tool.poetry]
name = "popup-audio-player"
version = "0.1.0"
description = ""
authors = ["Marc Steele <steelegbr@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12, <3.14"
pyside6 = "^6.8.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
